kitty website updates

--- a/kitty/keyboard-protocol.html
+++ b/kitty/keyboard-protocol.html
@@ -960,20 +960,25 @@ compatibility reasons.</p>
 <td><p>LEFT_SUPER</p></td>
 <td><p><code class="docutils literal notranslate"><span class="pre">57443 u</span></code></p></td>
 </tr>
-<tr class="row-even"><td><p>RIGHT_SHIFT</p></td>
+<tr class="row-even"><td><p>LEFT_HYPER</p></td>
 <td><p><code class="docutils literal notranslate"><span class="pre">57444 u</span></code></p></td>
-<td><p>RIGHT_CONTROL</p></td>
+<td><p>RIGHT_SHIFT</p></td>
 <td><p><code class="docutils literal notranslate"><span class="pre">57445 u</span></code></p></td>
 </tr>
-<tr class="row-odd"><td><p>RIGHT_ALT</p></td>
+<tr class="row-odd"><td><p>RIGHT_CONTROL</p></td>
 <td><p><code class="docutils literal notranslate"><span class="pre">57446 u</span></code></p></td>
-<td><p>RIGHT_SUPER</p></td>
+<td><p>RIGHT_ALT</p></td>
 <td><p><code class="docutils literal notranslate"><span class="pre">57447 u</span></code></p></td>
 </tr>
-<tr class="row-even"><td><p>ISO_LEVEL3_SHIFT</p></td>
+<tr class="row-even"><td><p>RIGHT_SUPER</p></td>
 <td><p><code class="docutils literal notranslate"><span class="pre">57448 u</span></code></p></td>
-<td><p>ISO_LEVEL5_SHIFT</p></td>
+<td><p>RIGHT_HYPER</p></td>
 <td><p><code class="docutils literal notranslate"><span class="pre">57449 u</span></code></p></td>
+</tr>
+<tr class="row-odd"><td><p>ISO_LEVEL3_SHIFT</p></td>
+<td><p><code class="docutils literal notranslate"><span class="pre">57450 u</span></code></p></td>
+<td><p>ISO_LEVEL5_SHIFT</p></td>
+<td><p><code class="docutils literal notranslate"><span class="pre">57451 u</span></code></p></td>
 </tr>
 </tbody>
 </table>
