kitty website updates

--- a/kitty/graphics-protocol.html
+++ b/kitty/graphics-protocol.html
@@ -667,7 +667,10 @@ take, and the default value they take when missing. All integers are 32-bit.</p>
 <td><p>Single character.
 <code class="docutils literal notranslate"><span class="pre">(t,</span> <span class="pre">T,</span> <span class="pre">q,</span> <span class="pre">p,</span> <span class="pre">d)</span></code></p></td>
 <td><p><code class="docutils literal notranslate"><span class="pre">t</span></code></p></td>
-<td><p>The overall action this graphics command is performing.</p></td>
+<td><p>The overall action this graphics command is performing.
+<code class="docutils literal notranslate"><span class="pre">t</span></code> - transmit data, <code class="docutils literal notranslate"><span class="pre">T</span></code> - transmit data and display image,
+<code class="docutils literal notranslate"><span class="pre">q</span></code> - query terminal, <code class="docutils literal notranslate"><span class="pre">p</span></code> - put (display) previous transmitted image,
+<code class="docutils literal notranslate"><span class="pre">d</span></code> - delete image</p></td>
 </tr>
 <tr class="row-odd"><td><p><code class="docutils literal notranslate"><span class="pre">q</span></code></p></td>
 <td><p><code class="docutils literal notranslate"><span class="pre">0,</span> <span class="pre">1,</span> <span class="pre">2</span></code></p></td>
