kitty website updates

--- a/kitty/kittens/remote_file.html
+++ b/kitty/kittens/remote_file.html
@@ -109,6 +109,9 @@ to <em>Edit</em> it in which case kitty will download it and open it locally in 
 <code class="docutils literal notranslate"><span class="pre">EDITOR</span></code>. As you make changes to the file, they are automatically transferred
 to the remote computer. Note that this happens without needing to install <em>any</em>
 special software on the server, beyond <code class="docutils literal notranslate"><span class="pre">ls</span></code> that supports hyperlinks.</p>
+<div class="versionadded">
+<p><span class="versionmodified added">New in version 0.19.0.</span></p>
+</div>
 <div class="admonition note">
 <p class="admonition-title">Note</p>
 <p>Nested SSH sessions are not supported. The kitten will always try to copy
