kitty website updates

--- a/kitty/genindex.html
+++ b/kitty/genindex.html
@@ -192,6 +192,17 @@
 </li>
       </ul></li>
       <li>
+    --color &lt;COLOR&gt;
+
+      <ul>
+        <li><a href="generated/launch.html#cmdoption-color">command line option</a>
+</li>
+        <li><a href="remote-control.html#cmdoption-kitty-launch-color">kitty-@-launch command line option</a>
+</li>
+        <li><a href="launch.html#cmdoption-launch-color">launch command line option</a>
+</li>
+      </ul></li>
+      <li>
     --columns &lt;COLUMNS&gt;
 
       <ul>
@@ -516,6 +527,13 @@
 </li>
       </ul></li>
       <li>
+    --loop &lt;LOOP&gt;
+
+      <ul>
+        <li><a href="kittens/icat.html#cmdoption-kitty-kitten-icat-loop">kitty-+kitten-icat command line option</a>
+</li>
+      </ul></li>
+      <li>
     --marker &lt;MARKER&gt;
 
       <ul>
@@ -654,6 +672,8 @@
         <li><a href="remote-control.html#cmdoption-kitty-new-window-no-response">kitty-@-new-window command line option</a>
 </li>
       </ul></li>
+  </ul></td>
+  <td style="width: 33%; vertical-align: top;"><ul>
       <li>
     --os-window-class &lt;OS_WINDOW_CLASS&gt;
 
@@ -665,8 +685,6 @@
         <li><a href="launch.html#cmdoption-launch-os-window-class">launch command line option</a>
 </li>
       </ul></li>
-  </ul></td>
-  <td style="width: 33%; vertical-align: top;"><ul>
       <li>
     --os-window-name &lt;OS_WINDOW_NAME&gt;
 
@@ -1071,6 +1089,13 @@
 </li>
       </ul></li>
       <li>
+    -l &lt;LOOP&gt;
+
+      <ul>
+        <li><a href="kittens/icat.html#cmdoption-kitty-kitten-icat-loop">kitty-+kitten-icat command line option</a>
+</li>
+      </ul></li>
+      <li>
     -m &lt;MATCH&gt;
 
       <ul>
@@ -1211,6 +1236,8 @@
 
       <ul>
         <li><a href="generated/launch.html#cmdoption-allow-remote-control">--allow-remote-control</a>
+</li>
+        <li><a href="generated/launch.html#cmdoption-color">--color &lt;COLOR&gt;</a>
 </li>
         <li><a href="generated/launch.html#cmdoption-copy-cmdline">--copy-cmdline</a>
 </li>
@@ -2087,6 +2114,8 @@
 </li>
         <li><a href="kittens/icat.html#cmdoption-kitty-kitten-icat-hold">--hold</a>
 </li>
+        <li><a href="kittens/icat.html#cmdoption-kitty-kitten-icat-loop">--loop &lt;LOOP&gt;</a>
+</li>
         <li><a href="kittens/icat.html#cmdoption-kitty-kitten-icat-place">--place &lt;PLACE&gt;</a>
 </li>
         <li><a href="kittens/icat.html#cmdoption-kitty-kitten-icat-print-window-size">--print-window-size</a>
@@ -2100,6 +2129,8 @@
         <li><a href="kittens/icat.html#cmdoption-kitty-kitten-icat-transfer-mode">--transfer-mode &lt;TRANSFER_MODE&gt;</a>
 </li>
         <li><a href="kittens/icat.html#cmdoption-kitty-kitten-icat-z-index">--z-index &lt;Z_INDEX&gt;</a>
+</li>
+        <li><a href="kittens/icat.html#cmdoption-kitty-kitten-icat-loop">-l &lt;LOOP&gt;</a>
 </li>
         <li><a href="kittens/icat.html#cmdoption-kitty-kitten-icat-z-index">-z &lt;Z_INDEX&gt;</a>
 </li>
@@ -2316,6 +2347,8 @@
 
       <ul>
         <li><a href="remote-control.html#cmdoption-kitty-launch-allow-remote-control">--allow-remote-control</a>
+</li>
+        <li><a href="remote-control.html#cmdoption-kitty-launch-color">--color &lt;COLOR&gt;</a>
 </li>
         <li><a href="remote-control.html#cmdoption-kitty-launch-copy-cmdline">--copy-cmdline</a>
 </li>
@@ -3852,6 +3885,8 @@
 
       <ul>
         <li><a href="launch.html#cmdoption-launch-allow-remote-control">--allow-remote-control</a>
+</li>
+        <li><a href="launch.html#cmdoption-launch-color">--color &lt;COLOR&gt;</a>
 </li>
         <li><a href="launch.html#cmdoption-launch-copy-cmdline">--copy-cmdline</a>
 </li>
