kitty website updates

--- a/kitty/build.html
+++ b/kitty/build.html
@@ -8,7 +8,7 @@
     <title>Building kitty from source &#8212; kitty 0.19.3 documentation</title>
     <link rel="stylesheet" href="_static/pygments.css" type="text/css" />
     <link rel="stylesheet" href="_static/alabaster.css" type="text/css" />
-    <link rel="stylesheet" href="_static/custom.css" type="text/css" />
+    <link rel="stylesheet" type="text/css" href="_static/custom.css" />
     <script id="documentation_options" data-url_root="./" src="_static/documentation_options.js"></script>
     <script src="_static/jquery.js"></script>
     <script src="_static/underscore.js"></script>
@@ -131,7 +131,7 @@ the following dependencies are installed first.</p>
 <li><p>gcc or clang</p></li>
 <li><p>pkg-config</p></li>
 <li><p>For building on Linux in addition to the above dependencies you might also need to install the <code class="docutils literal notranslate"><span class="pre">-dev</span></code> packages for:
-<code class="docutils literal notranslate"><span class="pre">libdbus-1-dev</span></code>, <code class="docutils literal notranslate"><span class="pre">libxcursor-dev</span></code>, <code class="docutils literal notranslate"><span class="pre">libxrandr-dev</span></code>, <code class="docutils literal notranslate"><span class="pre">libxi-dev</span></code>, <code class="docutils literal notranslate"><span class="pre">libxinerama-dev</span></code>, <code class="docutils literal notranslate"><span class="pre">libgl1-mesa-dev</span></code>, <code class="docutils literal notranslate"><span class="pre">libxkbcommon-x11-dev</span></code>, <code class="docutils literal notranslate"><span class="pre">libfontconfig-dev</span></code>, and <code class="docutils literal notranslate"><span class="pre">libpython3-dev</span></code>,
+<code class="docutils literal notranslate"><span class="pre">libdbus-1-dev</span></code>, <code class="docutils literal notranslate"><span class="pre">libxcursor-dev</span></code>, <code class="docutils literal notranslate"><span class="pre">libxrandr-dev</span></code>, <code class="docutils literal notranslate"><span class="pre">libxi-dev</span></code>, <code class="docutils literal notranslate"><span class="pre">libxinerama-dev</span></code>, <code class="docutils literal notranslate"><span class="pre">libgl1-mesa-dev</span></code>, <code class="docutils literal notranslate"><span class="pre">libxkbcommon-x11-dev</span></code>, <code class="docutils literal notranslate"><span class="pre">libfontconfig-dev</span></code>, <code class="docutils literal notranslate"><span class="pre">libx11-xcb-dev</span></code>, <code class="docutils literal notranslate"><span class="pre">liblcms2-dev</span></code>, and <code class="docutils literal notranslate"><span class="pre">libpython3-dev</span></code>,
 if they are not already installed by your distro.</p></li>
 </ul>
 </div></blockquote>
