--- a/kitty/genindex.html
+++ b/kitty/genindex.html
@@ -8,7 +8,7 @@
     <title>Index &#8212; kitty 0.19.3 documentation</title>
     <link rel="stylesheet" href="_static/pygments.css" type="text/css" />
     <link rel="stylesheet" href="_static/alabaster.css" type="text/css" />
-    <link rel="stylesheet" href="_static/custom.css" type="text/css" />
+    <link rel="stylesheet" type="text/css" href="_static/custom.css" />
     <script id="documentation_options" data-url_root="./" src="_static/documentation_options.js"></script>
     <script src="_static/jquery.js"></script>
     <script src="_static/underscore.js"></script>
@@ -1521,6 +1521,8 @@
         <li><a href="conf.html#opt-kitty.tab_bar_style">kitty.tab_bar_style</a>
 </li>
         <li><a href="conf.html#opt-kitty.tab_fade">kitty.tab_fade</a>
+</li>
+        <li><a href="conf.html#opt-kitty.tab_powerline_style">kitty.tab_powerline_style</a>
 </li>
         <li><a href="conf.html#opt-kitty.tab_separator">kitty.tab_separator</a>
 </li>
@@ -3725,6 +3727,13 @@
 
       <ul>
         <li><a href="conf.html#opt-kitty.tab_fade">Config Setting</a>
+</li>
+      </ul></li>
+      <li>
+    kitty.tab_powerline_style
+
+      <ul>
+        <li><a href="conf.html#opt-kitty.tab_powerline_style">Config Setting</a>
 </li>
       </ul></li>
       <li>
