--- a/kitty/marks.html
+++ b/kitty/marks.html
@@ -8,7 +8,7 @@
     <title>Marks &#8212; kitty 0.19.3 documentation</title>
     <link rel="stylesheet" href="_static/pygments.css" type="text/css" />
     <link rel="stylesheet" href="_static/alabaster.css" type="text/css" />
-    <link rel="stylesheet" href="_static/custom.css" type="text/css" />
+    <link rel="stylesheet" type="text/css" href="_static/custom.css" />
     <script id="documentation_options" data-url_root="./" src="_static/documentation_options.js"></script>
     <script src="_static/jquery.js"></script>
     <script src="_static/underscore.js"></script>
@@ -165,8 +165,8 @@ use it by mapping it to some shortcut in <code class="file docutils literal notr
 <span class="nb">map</span> <span class="n">ctrl</span><span class="o">+</span><span class="n">n</span> <span class="n">scroll_to_mark</span> <span class="nb">next</span>
 </pre></div>
 </div>
-<p>Then pressing <kbd class="kbd docutils literal notranslate"><kbd class="kbd docutils literal notranslate">ctrl</kbd>+<kbd class="kbd docutils literal notranslate">p</kbd></kbd> will scroll to the first line in the scrollback
-buffer above the current top line that contains a mark. Pressing <kbd class="kbd docutils literal notranslate"><kbd class="kbd docutils literal notranslate">ctrl</kbd>+<kbd class="kbd docutils literal notranslate">n</kbd></kbd>
+<p>Then pressing <kbd class="kbd compound docutils literal notranslate"><kbd class="kbd docutils literal notranslate">ctrl</kbd>+<kbd class="kbd docutils literal notranslate">p</kbd></kbd> will scroll to the first line in the scrollback
+buffer above the current top line that contains a mark. Pressing <kbd class="kbd compound docutils literal notranslate"><kbd class="kbd docutils literal notranslate">ctrl</kbd>+<kbd class="kbd docutils literal notranslate">n</kbd></kbd>
 will scroll to show the first line below the current last line that contains
 a mark. If you wish to jump to a mark of a specific type, you can add that to
 the mapping:</p>
