kitty website updates

--- a/kitty/genindex.html
+++ b/kitty/genindex.html
@@ -96,6 +96,7 @@
  | <a href="#C"><strong>C</strong></a>
  | <a href="#K"><strong>K</strong></a>
  | <a href="#L"><strong>L</strong></a>
+ | <a href="#R"><strong>R</strong></a>
  
 </div>
 <h2 id="Symbols">Symbols</h2>
@@ -1483,6 +1484,8 @@
         <li><a href="conf.html#opt-kitty.resize_draw_strategy">kitty.resize_draw_strategy</a>
 </li>
         <li><a href="conf.html#opt-kitty.resize_in_steps">kitty.resize_in_steps</a>
+</li>
+        <li><a href="conf.html#opt-kitty.scrollback_fill_enlarged_window">kitty.scrollback_fill_enlarged_window</a>
 </li>
         <li><a href="conf.html#opt-kitty.scrollback_lines">kitty.scrollback_lines</a>
 </li>
@@ -3555,6 +3558,13 @@
 </li>
       </ul></li>
       <li>
+    kitty.scrollback_fill_enlarged_window
+
+      <ul>
+        <li><a href="conf.html#opt-kitty.scrollback_fill_enlarged_window">Config Setting</a>
+</li>
+      </ul></li>
+      <li>
     kitty.scrollback_lines
 
       <ul>
@@ -3934,6 +3944,19 @@
         <li><a href="launch.html#cmdoption-launch-title">--window-title &lt;WINDOW_TITLE&gt;</a>
 </li>
         <li><a href="launch.html#cmdoption-launch-watcher">-w &lt;WATCHER&gt;</a>
+</li>
+      </ul></li>
+  </ul></td>
+</tr></table>
+
+<h2 id="R">R</h2>
+<table style="width: 100%" class="indextable genindextable"><tr>
+  <td style="width: 33%; vertical-align: top;"><ul>
+      <li>
+    RFC
+
+      <ul>
+        <li><a href="graphics-protocol.html#index-0">RFC 1950</a>
 </li>
       </ul></li>
   </ul></td>
