kitty website updates

--- a/kitty/genindex.html
+++ b/kitty/genindex.html
@@ -5,7 +5,7 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Index &#8212; kitty 0.19.3 documentation</title>
+    <title>Index &#8212; kitty 0.20.0 documentation</title>
     <link rel="stylesheet" href="_static/pygments.css" type="text/css" />
     <link rel="stylesheet" href="_static/alabaster.css" type="text/css" />
     <link rel="stylesheet" type="text/css" href="_static/custom.css" />
@@ -135,6 +135,13 @@
         <li><a href="remote-control.html#cmdoption-kitty-set-font-size-all">kitty-@-set-font-size command line option</a>
 </li>
         <li><a href="remote-control.html#cmdoption-kitty-set-spacing-all">kitty-@-set-spacing command line option</a>
+</li>
+      </ul></li>
+      <li>
+    --all-env-vars
+
+      <ul>
+        <li><a href="remote-control.html#cmdoption-kitty-ls-all-env-vars">kitty-@-ls command line option</a>
 </li>
       </ul></li>
       <li>
@@ -2400,6 +2407,13 @@
         <li><a href="remote-control.html#cmdoption-kitty-launch-match">-m &lt;MATCH&gt;</a>
 </li>
         <li><a href="remote-control.html#cmdoption-kitty-launch-watcher">-w &lt;WATCHER&gt;</a>
+</li>
+      </ul></li>
+      <li>
+    kitty-@-ls command line option
+
+      <ul>
+        <li><a href="remote-control.html#cmdoption-kitty-ls-all-env-vars">--all-env-vars</a>
 </li>
       </ul></li>
       <li>
