kitty website updates

--- a/kitty/binary.html
+++ b/kitty/binary.html
@@ -5,7 +5,7 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>kitty - Binary install &#8212; kitty 0.20.1 documentation</title>
+    <title>kitty - Binary install &#8212; kitty 0.20.2 documentation</title>
     <link rel="stylesheet" href="_static/pygments.css" type="text/css" />
     <link rel="stylesheet" href="_static/alabaster.css" type="text/css" />
     <link rel="stylesheet" type="text/css" href="_static/custom.css" />
@@ -17,7 +17,7 @@
     <link rel="index" title="Index" href="genindex.html" />
     <link rel="search" title="Search" href="search.html" />
     <link rel="next" title="Building kitty from source" href="build.html" />
-    <link rel="prev" title="kitty - the fast, featureful, GPU based terminal emulator" href="index.html" />
+    <link rel="prev" title="Tabs and Windows" href="basic.html" />
 
 <!-- Global site tag (gtag.js) - Google Analytics -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=UA-20736318-2"></script>
@@ -90,7 +90,7 @@
 <h3>Related Topics</h3>
 <ul>
   <li><a href="index.html">Documentation overview</a><ul>
-      <li>Previous: <a href="index.html" title="previous chapter">kitty - the fast, featureful, GPU based terminal emulator</a></li>
+      <li>Previous: <a href="basic.html" title="previous chapter">Tabs and Windows</a></li>
       <li>Next: <a href="build.html" title="next chapter">Building kitty from source</a></li>
   </ul></li>
 </ul>
