--- a/kitty/genindex.html
+++ b/kitty/genindex.html
@@ -5,7 +5,7 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Index &#8212; kitty 0.20.1 documentation</title>
+    <title>Index &#8212; kitty 0.20.2 documentation</title>
     <link rel="stylesheet" href="_static/pygments.css" type="text/css" />
     <link rel="stylesheet" href="_static/alabaster.css" type="text/css" />
     <link rel="stylesheet" type="text/css" href="_static/custom.css" />
@@ -1553,6 +1553,8 @@
         <li><a href="conf.html#opt-kitty.url_prefixes">kitty.url_prefixes</a>
 </li>
         <li><a href="conf.html#opt-kitty.visual_bell_duration">kitty.visual_bell_duration</a>
+</li>
+        <li><a href="conf.html#opt-kitty.wayland_titlebar_color">kitty.wayland_titlebar_color</a>
 </li>
         <li><a href="conf.html#opt-kitty.wheel_scroll_multiplier">kitty.wheel_scroll_multiplier</a>
 </li>
@@ -3863,6 +3865,13 @@
 
       <ul>
         <li><a href="conf.html#opt-kitty.visual_bell_duration">Config Setting</a>
+</li>
+      </ul></li>
+      <li>
+    kitty.wayland_titlebar_color
+
+      <ul>
+        <li><a href="conf.html#opt-kitty.wayland_titlebar_color">Config Setting</a>
 </li>
       </ul></li>
       <li>
