--- a/kitty/keyboard-protocol.html
+++ b/kitty/keyboard-protocol.html
@@ -5,11 +5,11 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>A protocol for comprehensive keyboard handling in terminals &#8212; kitty 0.20.3 documentation</title>
-    <link rel="stylesheet" href="_static/pygments.css" type="text/css" />
-    <link rel="stylesheet" href="_static/alabaster.css" type="text/css" />
+    <title>A protocol for comprehensive keyboard handling in terminals &#8212; kitty 0.21.0 documentation</title>
+    <link rel="stylesheet" type="text/css" href="_static/pygments.css" />
+    <link rel="stylesheet" type="text/css" href="_static/alabaster.css" />
     <link rel="stylesheet" type="text/css" href="_static/custom.css" />
-    <script id="documentation_options" data-url_root="./" src="_static/documentation_options.js"></script>
+    <script data-url_root="./" id="documentation_options" src="_static/documentation_options.js"></script>
     <script src="_static/jquery.js"></script>
     <script src="_static/underscore.js"></script>
     <script src="_static/doctools.js"></script>
@@ -218,7 +218,7 @@ decimal number. For example, the <kbd class="kbd docutils literal notranslate">A
 the unicode code for lowercase <code class="docutils literal notranslate"><span class="pre">a</span></code>. Note that the codepoint used is <em>always</em>
 the lower-case (or more technically, un-shifted) version of the key. If the
 user presses, for example, <kbd class="kbd compound docutils literal notranslate"><kbd class="kbd docutils literal notranslate">ctrl</kbd>+<kbd class="kbd docutils literal notranslate">shift</kbd>+<kbd class="kbd docutils literal notranslate">a</kbd></kbd> the escape code would be <code class="docutils literal notranslate"><span class="pre">CSI</span>
-<span class="pre">97;modifiers</span> <span class="pre">u</span></code>. It <em>must not</em> by <code class="docutils literal notranslate"><span class="pre">CSI</span> <span class="pre">65;</span> <span class="pre">modifiers</span> <span class="pre">u</span></code>.</p>
+<span class="pre">97;modifiers</span> <span class="pre">u</span></code>. It <em>must not</em> be <code class="docutils literal notranslate"><span class="pre">CSI</span> <span class="pre">65;</span> <span class="pre">modifiers</span> <span class="pre">u</span></code>.</p>
 <p>If <em>alternate key reporting</em> is requested by the program running in the
 terminal, the terminal can send two additional Unicode codepoints, the
 <em>shifted key</em> and <em>base layout key</em>, separated by colons.
@@ -403,7 +403,7 @@ represented in one of the following two forms:</p>
 </div>
 <p>This makes it very easy to parse key events in an application. In particular,
 <kbd class="kbd compound docutils literal notranslate"><kbd class="kbd docutils literal notranslate">ctrl</kbd>+<kbd class="kbd docutils literal notranslate">c</kbd></kbd> will no longer generate the <code class="docutils literal notranslate"><span class="pre">SIGINT</span></code> signal, but instead be
-delivers as a <code class="docutils literal notranslate"><span class="pre">CSI</span> <span class="pre">u</span></code> escape code. This has the nice side effect of making it
+delivered as a <code class="docutils literal notranslate"><span class="pre">CSI</span> <span class="pre">u</span></code> escape code. This has the nice side effect of making it
 much easier to integrate into the application event loop. The only exceptions
 are the <kbd class="kbd compound docutils literal notranslate"><kbd class="kbd docutils literal notranslate">Enter,</kbd> <kbd class="kbd docutils literal notranslate">Tab</kbd> <kbd class="kbd docutils literal notranslate">and</kbd> <kbd class="kbd docutils literal notranslate">Backspace</kbd></kbd> keys which still generate the same
 bytes as in legacy mode this is to allow the user to type and execute commands
