--- a/kitty/genindex.html
+++ b/kitty/genindex.html
@@ -5,7 +5,7 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Index &#8212; kitty 0.21.1 documentation</title>
+    <title>Index &#8212; kitty 0.21.2 documentation</title>
     <link rel="stylesheet" type="text/css" href="_static/pygments.css" />
     <link rel="stylesheet" type="text/css" href="_static/alabaster.css" />
     <link rel="stylesheet" type="text/css" href="_static/custom.css" />
@@ -1347,6 +1347,8 @@
 </li>
         <li><a href="conf.html#opt-kitty.active_tab_title_template">kitty.active_tab_title_template</a>
 </li>
+        <li><a href="conf.html#opt-kitty.adjust_baseline">kitty.adjust_baseline</a>
+</li>
         <li><a href="conf.html#opt-kitty.adjust_line_height">kitty.adjust_line_height</a>
 </li>
         <li><a href="conf.html#opt-kitty.allow_hyperlinks">kitty.allow_hyperlinks</a>
@@ -1568,6 +1570,8 @@
         <li><a href="conf.html#opt-kitty.update_check_interval">kitty.update_check_interval</a>
 </li>
         <li><a href="conf.html#opt-kitty.url_color">kitty.url_color</a>
+</li>
+        <li><a href="conf.html#opt-kitty.url_excluded_characters">kitty.url_excluded_characters</a>
 </li>
         <li><a href="conf.html#opt-kitty.url_prefixes">kitty.url_prefixes</a>
 </li>
@@ -2709,6 +2713,13 @@
 
       <ul>
         <li><a href="conf.html#opt-kitty.active_tab_title_template">Config Setting</a>
+</li>
+      </ul></li>
+      <li>
+    kitty.adjust_baseline
+
+      <ul>
+        <li><a href="conf.html#opt-kitty.adjust_baseline">Config Setting</a>
 </li>
       </ul></li>
       <li>
@@ -4053,6 +4064,13 @@
 
       <ul>
         <li><a href="conf.html#opt-kitty.url_color">Config Setting</a>
+</li>
+      </ul></li>
+      <li>
+    kitty.url_excluded_characters
+
+      <ul>
+        <li><a href="conf.html#opt-kitty.url_excluded_characters">Config Setting</a>
 </li>
       </ul></li>
       <li>
