kitty website updates

--- a/kitty/actions.html
+++ b/kitty/actions.html
@@ -7,7 +7,7 @@
 <meta http-equiv="refresh" content="0;url=actions/" />
 </noscript>
 <script type="text/javascript">
-window.location.replace('./actions/' + window.location.hash));
+window.location.replace('./actions/' + window.location.hash);
 </script>
 </head>
 <body>
