--- a/kitty/color-stack.html
+++ b/kitty/color-stack.html
@@ -7,7 +7,7 @@
 <meta http-equiv="refresh" content="0;url=color-stack/" />
 </noscript>
 <script type="text/javascript">
-window.location.replace('./color-stack/' + window.location.hash));
+window.location.replace('./color-stack/' + window.location.hash);
 </script>
 </head>
 <body>
