--- a/kitty/deccara.html
+++ b/kitty/deccara.html
@@ -7,7 +7,7 @@
 <meta http-equiv="refresh" content="0;url=deccara/" />
 </noscript>
 <script type="text/javascript">
-window.location.replace('./deccara/' + window.location.hash));
+window.location.replace('./deccara/' + window.location.hash);
 </script>
 </head>
 <body>
