--- a/kitty/desktop-notifications.html
+++ b/kitty/desktop-notifications.html
@@ -7,7 +7,7 @@
 <meta http-equiv="refresh" content="0;url=desktop-notifications/" />
 </noscript>
 <script type="text/javascript">
-window.location.replace('./desktop-notifications/' + window.location.hash));
+window.location.replace('./desktop-notifications/' + window.location.hash);
 </script>
 </head>
 <body>
