--- a/kitty/graphics-protocol.html
+++ b/kitty/graphics-protocol.html
@@ -7,7 +7,7 @@
 <meta http-equiv="refresh" content="0;url=graphics-protocol/" />
 </noscript>
 <script type="text/javascript">
-window.location.replace('./graphics-protocol/' + window.location.hash));
+window.location.replace('./graphics-protocol/' + window.location.hash);
 </script>
 </head>
 <body>
