--- a/kitty/keyboard-protocol.html
+++ b/kitty/keyboard-protocol.html
@@ -7,7 +7,7 @@
 <meta http-equiv="refresh" content="0;url=keyboard-protocol/" />
 </noscript>
 <script type="text/javascript">
-window.location.replace('./keyboard-protocol/' + window.location.hash));
+window.location.replace('./keyboard-protocol/' + window.location.hash);
 </script>
 </head>
 <body>
