--- a/kitty/kittens/query_terminal.html
+++ b/kitty/kittens/query_terminal.html
@@ -7,7 +7,7 @@
 <meta http-equiv="refresh" content="0;url=query_terminal/" />
 </noscript>
 <script type="text/javascript">
-window.location.replace('./query_terminal/' + window.location.hash));
+window.location.replace('./query_terminal/' + window.location.hash);
 </script>
 </head>
 <body>
