--- a/kitty/kittens/remote_file.html
+++ b/kitty/kittens/remote_file.html
@@ -7,7 +7,7 @@
 <meta http-equiv="refresh" content="0;url=remote_file/" />
 </noscript>
 <script type="text/javascript">
-window.location.replace('./remote_file/' + window.location.hash));
+window.location.replace('./remote_file/' + window.location.hash);
 </script>
 </head>
 <body>
