--- a/kitty/kittens/unicode-input.html
+++ b/kitty/kittens/unicode-input.html
@@ -7,7 +7,7 @@
 <meta http-equiv="refresh" content="0;url=unicode-input/" />
 </noscript>
 <script type="text/javascript">
-window.location.replace('./unicode-input/' + window.location.hash));
+window.location.replace('./unicode-input/' + window.location.hash);
 </script>
 </head>
 <body>
