--- a/kitty/kittens_intro.html
+++ b/kitty/kittens_intro.html
@@ -7,7 +7,7 @@
 <meta http-equiv="refresh" content="0;url=kittens_intro/" />
 </noscript>
 <script type="text/javascript">
-window.location.replace('./kittens_intro/' + window.location.hash));
+window.location.replace('./kittens_intro/' + window.location.hash);
 </script>
 </head>
 <body>
