--- a/kitty/protocol-extensions.html
+++ b/kitty/protocol-extensions.html
@@ -7,7 +7,7 @@
 <meta http-equiv="refresh" content="0;url=protocol-extensions/" />
 </noscript>
 <script type="text/javascript">
-window.location.replace('./protocol-extensions/' + window.location.hash));
+window.location.replace('./protocol-extensions/' + window.location.hash);
 </script>
 </head>
 <body>
