--- a/kitty/quickstart.html
+++ b/kitty/quickstart.html
@@ -7,7 +7,7 @@
 <meta http-equiv="refresh" content="0;url=quickstart/" />
 </noscript>
 <script type="text/javascript">
-window.location.replace('./quickstart/' + window.location.hash));
+window.location.replace('./quickstart/' + window.location.hash);
 </script>
 </head>
 <body>
