--- a/kitty/unscroll.html
+++ b/kitty/unscroll.html
@@ -7,7 +7,7 @@
 <meta http-equiv="refresh" content="0;url=unscroll/" />
 </noscript>
 <script type="text/javascript">
-window.location.replace('./unscroll/' + window.location.hash));
+window.location.replace('./unscroll/' + window.location.hash);
 </script>
 </head>
 <body>
