--- a/kitty/kittens/diff.html
+++ b/kitty/kittens/diff.html
@@ -7,7 +7,7 @@
 <meta http-equiv="refresh" content="0;url=diff/" />
 </noscript>
 <script type="text/javascript">
-window.location.replace('./diff/' + window.location.hash));
+window.location.replace('./diff/' + window.location.hash);
 </script>
 </head>
 <body>
