--- a/kitty/kittens/hints.html
+++ b/kitty/kittens/hints.html
@@ -7,7 +7,7 @@
 <meta http-equiv="refresh" content="0;url=hints/" />
 </noscript>
 <script type="text/javascript">
-window.location.replace('./hints/' + window.location.hash));
+window.location.replace('./hints/' + window.location.hash);
 </script>
 </head>
 <body>
