--- a/kitty/kittens/hyperlinked_grep.html
+++ b/kitty/kittens/hyperlinked_grep.html
@@ -7,7 +7,7 @@
 <meta http-equiv="refresh" content="0;url=hyperlinked_grep/" />
 </noscript>
 <script type="text/javascript">
-window.location.replace('./hyperlinked_grep/' + window.location.hash));
+window.location.replace('./hyperlinked_grep/' + window.location.hash);
 </script>
 </head>
 <body>
