--- a/kitty/open_actions.html
+++ b/kitty/open_actions.html
@@ -7,7 +7,7 @@
 <meta http-equiv="refresh" content="0;url=open_actions/" />
 </noscript>
 <script type="text/javascript">
-window.location.replace('./open_actions/' + window.location.hash));
+window.location.replace('./open_actions/' + window.location.hash);
 </script>
 </head>
 <body>
