--- a/kitty/rc_protocol.html
+++ b/kitty/rc_protocol.html
@@ -7,7 +7,7 @@
 <meta http-equiv="refresh" content="0;url=rc_protocol/" />
 </noscript>
 <script type="text/javascript">
-window.location.replace('./rc_protocol/' + window.location.hash));
+window.location.replace('./rc_protocol/' + window.location.hash);
 </script>
 </head>
 <body>
