--- a/kitty/remote-control.html
+++ b/kitty/remote-control.html
@@ -7,7 +7,7 @@
 <meta http-equiv="refresh" content="0;url=remote-control/" />
 </noscript>
 <script type="text/javascript">
-window.location.replace('./remote-control/' + window.location.hash));
+window.location.replace('./remote-control/' + window.location.hash);
 </script>
 </head>
 <body>
