--- a/kitty/search/index.html
+++ b/kitty/search/index.html
@@ -8,8 +8,8 @@
     <link rel="stylesheet" type="text/css" href="../_static/styles/furo.css" />
     <link rel="stylesheet" type="text/css" href="../_static/copybutton.css" />
     <link rel="stylesheet" type="text/css" href="../_static/tabs.css" />
-    <link rel="stylesheet" type="text/css" href="../_static/custom.css" />
     <link rel="stylesheet" type="text/css" href="../_static/styles/furo-extensions.css" />
+    <link rel="stylesheet" type="text/css" href="../_static/custom.css" />
     
 
 
@@ -39,6 +39,7 @@
   
   }
 </style><link media="(prefers-color-scheme: dark)" rel="stylesheet" href="../_static/pygments_dark.css">
+
   
       <script type="text/javascript">
       var _gaq = _gaq || [];
@@ -815,6 +816,7 @@
     <script src="../_static/clipboard.min.js"></script>
     <script src="../_static/copybutton.js"></script>
     <script src="../_static/tabs.js"></script>
+    <script src="../_static/custom.js"></script>
     
 <script src="../_static/searchtools.js"></script>
 <script src="../_static/language_data.js"></script>
