--- a/kitty/actions/index.html
+++ b/kitty/actions/index.html
@@ -15,8 +15,8 @@
     <link rel="stylesheet" type="text/css" href="../_static/styles/furo.css" />
     <link rel="stylesheet" type="text/css" href="../_static/copybutton.css" />
     <link rel="stylesheet" type="text/css" href="../_static/tabs.css" />
-    <link rel="stylesheet" type="text/css" href="../_static/custom.css" />
     <link rel="stylesheet" type="text/css" href="../_static/styles/furo-extensions.css" />
+    <link rel="stylesheet" type="text/css" href="../_static/custom.css" />
     
 
 
@@ -46,6 +46,7 @@
   
   }
 </style><link media="(prefers-color-scheme: dark)" rel="stylesheet" href="../_static/pygments_dark.css">
+
   
       <script type="text/javascript">
       var _gaq = _gaq || [];
@@ -1541,5 +1542,6 @@ config options. For example:</p>
     <script src="../_static/clipboard.min.js"></script>
     <script src="../_static/copybutton.js"></script>
     <script src="../_static/tabs.js"></script>
+    <script src="../_static/custom.js"></script>
     </body>
 </html>
