--- a/kitty/changelog/index.html
+++ b/kitty/changelog/index.html
@@ -15,8 +15,8 @@
     <link rel="stylesheet" type="text/css" href="../_static/styles/furo.css" />
     <link rel="stylesheet" type="text/css" href="../_static/copybutton.css" />
     <link rel="stylesheet" type="text/css" href="../_static/tabs.css" />
-    <link rel="stylesheet" type="text/css" href="../_static/custom.css" />
     <link rel="stylesheet" type="text/css" href="../_static/styles/furo-extensions.css" />
+    <link rel="stylesheet" type="text/css" href="../_static/custom.css" />
     
 
 
@@ -46,6 +46,7 @@
   
   }
 </style><link media="(prefers-color-scheme: dark)" rel="stylesheet" href="../_static/pygments_dark.css">
+
   
       <script type="text/javascript">
       var _gaq = _gaq || [];
@@ -2715,5 +2716,6 @@ contents of the screen + scrollback buffer as stdin to the command.</p></li>
     <script src="../_static/clipboard.min.js"></script>
     <script src="../_static/copybutton.js"></script>
     <script src="../_static/tabs.js"></script>
+    <script src="../_static/custom.js"></script>
     </body>
 </html>
