Fix copy-paste typo

--- a/kitty/graphics-protocol/index.html
+++ b/kitty/graphics-protocol/index.html
@@ -1997,8 +1997,7 @@ take, and the default value they take when missing. All integers are 32-bit.</p>
 <tr class="row-even"><td><p><code class="docutils literal notranslate"><span class="pre">U</span></code></p></td>
 <td><p>Positive integer</p></td>
 <td><p><code class="docutils literal notranslate"><span class="pre">0</span></code></p></td>
-<td><p>Set to <code class="docutils literal notranslate"><span class="pre">1</span></code> to create a virtual placement for a Unicode placeholder.
-<code class="docutils literal notranslate"><span class="pre">1</span></code> is to not move the cursor at all when placing the image.</p></td>
+<td><p>Set to <code class="docutils literal notranslate"><span class="pre">1</span></code> to create a virtual placement for a Unicode placeholder.</p></td>
 </tr>
 <tr class="row-odd"><td><p><code class="docutils literal notranslate"><span class="pre">z</span></code></p></td>
 <td><p>32-bit integer</p></td>
